# yazses

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  SUPPORT.md  index.html  install-apt.sh  install-pipx.sh  llms.txt  pyproject.toml
.github/: SECURITY.md
.github/workflows/: apt-repo.yml  build-macos.yml  build-windows.yml  ppa.yml  release.yml  rust-ci.yml  rust-release.yml  snap.yml  test.yml
apt/: InRelease  KEY.gpg  Packages  Release  Release.gpg  yazses_1.3.1_amd64.deb  yazses_1.3.2_amd64.deb  yazses_1.3.3_amd64.deb  yazses_1.3.4_amd64.deb  yazses_1.3.5_amd64.deb  yazses_1.3.6_amd64.deb  yazses_1.3.7_amd64.deb  yazses_1.3.8_amd64.deb  yazses_1.3.9_amd64.deb  yazses_1.4.0_amd64.deb  yazses_1.4.1_amd64.deb
contrib/: yazses-session.desktop  yazses.service  ydotoold.service
crates/yazses-atspi/: Cargo.toml
crates/yazses-atspi/src/: lib.rs
crates/yazses-audio/: Cargo.toml
crates/yazses-audio/src/: capture.rs  lib.rs  ring_buffer.rs  silero_vad.rs  vad.rs
crates/yazses-cli/: Cargo.toml
crates/yazses-cli/src/: main.rs
crates/yazses-core/: Cargo.toml
crates/yazses-core/src/: config.rs  daemon.rs  dispatcher.rs  doctor.rs  enroll.rs  lib.rs  state.rs
crates/yazses-editors/: Cargo.toml
crates/yazses-editors/src/: hyprland_detector.rs  lib.rs  mock.rs  neovim_bridge.rs  null_detector.rs  probe.rs  protocol.rs  sway_detector.rs  vscode_bridge.rs  wlr_detector.rs  x11_detector.rs
crates/yazses-inputs/: Cargo.toml
crates/yazses-inputs/src/: emg.rs  hold_detector.rs  keyboard.rs  lib.rs  mock.rs  protocol.rs
crates/yazses-ipc/: Cargo.toml
crates/yazses-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/yazses-llm/: Cargo.toml
crates/yazses-llm/src/: cleanup.rs  dictation_commands.rs  lib.rs  llama_backend.rs  mechanics.rs  mock.rs  ollama_backend.rs  openai_backend.rs  protocol.rs  tools.rs  vocabulary.rs
crates/yazses-memory/: Cargo.toml
crates/yazses-memory/src/: embed.rs  key.rs  lib.rs  store.rs
crates/yazses-nvda/: Cargo.toml
crates/yazses-nvda/src/: lib.rs
crates/yazses-stt/: Cargo.toml
crates/yazses-stt/src/: lib.rs  mock.rs  moonshine.rs  protocol.rs  router.rs  whisper_backend.rs
debian/: changelog  control  copyright  postinst  prerm  rules
docs/: _config.yml  cli-reference.md  index.md  install-linux.md  macos-install.md  migration-v04-to-v10.md  plugin-sdk.md  privacy-statement.md  windows-install.md
docs/releases/: v1.4.1.md  v2.0.0-dev.1.md  v2.0.0-dev.2.md
examples/: config.example.toml
packaging/: README.md
packaging/arch/: PKGBUILD  README.md
packaging/homebrew/: yazses-formula.rb  yazses-v1.rb  yazses.rb
packaging/macos/: entitlements.plist  yazses.spec
packaging/windows/: installer.iss  yazses.spec
scripts/: build-deb.sh  build-macos.sh  build-windows.ps1  install-local.sh  patch-release-shas.sh  update-apt-repo.sh  upload-ppa.sh
snap/: snapcraft.yaml
snap/gui/: social-card.html
snap/local/: yazses-daemon-wrapper  yazses-overlay-wrapper  yazses-tray-wrapper  yazses-wrapper
src/yazses/: __main__.py  cli.py  config.py  main.py
src/yazses/accessibility/: enroll.py
src/yazses/agent/: __init__.py  plan.py
src/yazses/audio/: padding.py  personal_vad.py  recorder.py  vad.py  vad_calibrated.py
src/yazses/commands/: context.py  dispatch.py  edit_ops.py  grammar.py  lsp_context.py  macros.py  model_manager.py  profiles.py  revise.py  slm_router.py
src/yazses/core/: daemon.py
src/yazses/gaze/: __init__.py  base.py  calibrate.py  factory.py  l2cs.py  zones.py
src/yazses/hotkeys/: evdev_hold.py  hold_detector.py
src/yazses/inject/: auto.py  base.py  clipboard.py  streaming.py  wtype.py  xdotool.py  ydotool.py
src/yazses/ipc/: client.py  protocol.py  server.py
src/yazses/learning/: __init__.py  analysis.py  capture.py  crypto.py  edit_watch.py  store.py  tuner.py
src/yazses/modality/: __init__.py  router.py
src/yazses/overlay/: __init__.py  animation.py  app.py  envelope.py  poller.py  position.py  widget.py
src/yazses/personalize/: __init__.py  prompt_builder.py
src/yazses/pilot/: __init__.py  plan.py
src/yazses/platform/: __init__.py  base.py  factory.py
src/yazses/polyglot/: __init__.py  lid.py  router.py
src/yazses/postprocess/: cleaner.py  confidence.py  llm_cleanup.py  prosody.py  punch_in.py  spacing.py  voice_punctuation.py
src/yazses/recall/: __init__.py  query.py  scratch.py
src/yazses/remote/: agent.py  forwarder.py  inject.py  local_proxy.py
src/yazses/stt/: endpoint.py  faster_whisper.py  streaming.py  vocabulary.py
src/yazses/system/: configedit.py  context_read.py  doctor.py  features.py  miclevel.py  pid.py  setup.py  single_instance.py  updater.py  vocabulary.py
src/yazses/tray/: app.py
src/yazses/tts/: __init__.py  base.py  chunking.py  factory.py  kokoro.py  null.py
src/yazses/voiceprint/: __init__.py  base.py  ecapa.py  embedding.py  enroll.py  factory.py  store.py
tests/: conftest.py  test_accessibility_enroll.py  test_agent_plan.py  test_audio_padding.py  test_auto_inject.py  test_cleaner.py  test_cli_corpus.py  test_cli_help.py  test_cli_hotkey.py  test_cli_update.py  test_cocktail.py  test_confidence.py  test_config.py  test_configedit.py  test_context_prime.py  test_context_read.py  test_continuation_spacing_daemon.py  test_disfluency_filter.py  test_doctor_dysfluency.py  test_doctor_improvements.py  test_doctor_install_diag.py  test_doctor_prosody.py  test_dysfluency_eval.py  test_edit_ops.py  test_emg_backend.py  test_endpoint.py  test_endpoint_daemon.py  test_endpoint_signals.py  test_evdev_find_keyboard.py  test_evdev_hold_onset.py  test_faster_whisper_words.py  test_features_vocab.py  test_gaze.py  test_grammar_classifier.py  test_grammar_punctuation_and_keys.py  test_hold_detector.py  test_ipc_protocol.py  test_learning_analysis.py  test_learning_capture.py  test_learning_crypto.py  (+47 more)
tests/fixtures/accessibility/: rms_stats.json
tests/fixtures/commands/: command_phrases.json  dictation_corpus.txt
tests/fixtures/disfluency/: corpus.json  dysfluency_eval.json
(+37 files in other folders)
