[package]
name = "yazses-core"
description = "YazSes v1.0 daemon — state machine, orchestrator, pipeline wiring (adr-001)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "yazses-daemon"
path = "src/bin/daemon.rs"

[features]
# LLM backends — pass-through to yazses-llm
ollama    = ["yazses-llm/ollama"]
llama-cpp = ["yazses-llm/llama-cpp"]

# STT backends — pass-through to yazses-stt
moonshine = ["yazses-stt/moonshine"]
whisper   = ["yazses-stt/whisper"]

# Encrypted memory (compiles SQLCipher + vendored OpenSSL — slow first build)
sqlcipher = ["yazses-memory/sqlcipher"]

[dependencies]
yazses-ipc      = { path = "../yazses-ipc" }
yazses-audio    = { path = "../yazses-audio" }
yazses-inputs   = { path = "../yazses-inputs" }
yazses-stt      = { path = "../yazses-stt" }
yazses-llm      = { path = "../yazses-llm" }
yazses-editors  = { path = "../yazses-editors" }
yazses-memory   = { path = "../yazses-memory" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"

# ── cargo-deb packaging metadata ─────────────────────────────────────────────
[package.metadata.deb]
name = "yazses"
maintainer = "Mohsen Seyedkazemi Ardebili <mohsen.seyedkazemi@gmail.com>"
copyright = "2026 Mohsen Seyedkazemi Ardebili"
license-file = ["../../LICENSE", "4"]
depends = "libasound2 | libasound2t64"
recommends = "speech-dispatcher, xdotool | ydotool | wtype"
section = "sound"
priority = "optional"
assets = [
    ["../../target/release/yazses",        "usr/bin/",  "755"],
    ["../../target/release/yazses-daemon", "usr/bin/",  "755"],
]
conf-files = []

# ── cargo-generate-rpm packaging metadata ────────────────────────────────────
[package.metadata.generate-rpm]
assets = [
    { source = "../../target/release/yazses",        dest = "/usr/bin/yazses",        mode = "755" },
    { source = "../../target/release/yazses-daemon", dest = "/usr/bin/yazses-daemon", mode = "755" },
]
[package.metadata.generate-rpm.requires]
alsa-lib = "*"
