[package]
name = "yazses-editors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Neovim RPC client (feature-gated `neovim`)
nvim-rs = { version = "0.9", optional = true }
rmpv = { version = "1", optional = true }

# Linux window-system backends
[target.'cfg(target_os = "linux")'.dependencies]
hyprland    = { version = "0.4.0-beta.3", optional = true }
swayipc     = { version = "4",            optional = true }
wayland-client          = { version = "0.31", optional = true }
wayland-protocols-wlr   = { version = "0.3",  optional = true, features = ["client"] }
x11rb       = { version = "0.13", features = ["allow-unsafe-code"], optional = true }

[features]
default        = []
neovim         = ["dep:nvim-rs", "dep:rmpv"]
vscode         = []
hyprland       = ["dep:hyprland"]
sway           = ["dep:swayipc"]
wlr-toplevel   = ["dep:wayland-client", "dep:wayland-protocols-wlr"]
x11            = ["dep:x11rb"]
