[package]
name = "yazses-nvda"
description = "Windows NVDA screen-reader announcer for YazSes (DLL controller pattern)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }

# Windows DLL loading for NVDA controller client (MIT license)
# Only linked on Windows targets.
[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8"
