[package]
name = "yazses-stt"
description = "Dual-stack STT — Moonshine v2 streaming + Whisper long-form, with STTRouter (adr-002)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Optional: Moonshine v2 via embedded Python (adr-009, spike S-6)
[dependencies.pyo3]
version = "0.28"
features = ["auto-initialize"]
optional = true

# Optional: Whisper-large-v3-turbo via whisper.cpp FFI (requires cmake)
[dependencies.whisper-rs]
version = "0.16"
features = ["tracing_backend"]
optional = true

[features]
default = []
moonshine = ["dep:pyo3"]
whisper   = ["dep:whisper-rs"]
